<package>
  <name> dumbo_common </name>
  <version>1.0.0</version>
  <description>
    Description files and services for CVAP's Dumbo robot.
    Implemented from the cob_common stack (http://ros.org/wiki/cob_common) by Florian Weisshardt.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/dumbo_common</url>
  <author>Francisco Vina</author>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
