<package>
  <name> dumbo_description </name>
  <version>1.0.0</version>
  <description>
    Description files and services for CVAP's Dumbo robot.
    Implementation based on the cob_description package (http://ros.org/wiki/cob_description) by Florian Weisshardt.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/dumbo_common</url>
  <author>Francisco Vina</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>


